--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,10 +3,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* margin-bottom: 50px; */
+  color: gray;
 }
 
 .logo {
-  font-size: 30px;
   font-weight: bold;
+}
+
+.text {
+  font-size: smaller;
 }
